Allow using a configMap in configVars

--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -102,6 +102,14 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - configmaps
+  resourceNames:
+  - machine-controller
+  verbs:
+  - get
+- apiGroups:
+  - ""
+  resources:
   - endpoints
   resourceNames:
   - machine-controller
