--- a/examples/machine-hetzner.yaml
+++ b/examples/machine-hetzner.yaml
@@ -1,3 +1,14 @@
+apiVersion: v1
+kind: Secret
+metadata:
+  # If you change the namespace/name, you must also
+  # adjust the rbac rules
+  name: machine-controller-hetzner
+  namespace: kube-system
+type: Opaque
+stringData:
+  token: << HETZNER_TOKEN >>
+---
 apiVersion: "machine.k8s.io/v1alpha1"
 kind: Machine
 metadata:
@@ -10,7 +21,11 @@ spec:
       - "<< YOUR_PUBLIC_KEY >>"
     cloudProvider: "hetzner"
     cloudProviderSpec:
-      token: "<< HETZNER_API_TOKEN >>"
+      token:
+        secretKeyRef:
+          namespace: kube-system
+          name: machine-controller-hetzner
+          key: token
       serverType: "cx11"
       datacenter: ""
       location: "fsn1"
