--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,18 +94,26 @@ jobs:
       - restore_cache:
           key: verify-tool-{{ .Revision }}
       - setup_remote_docker
-      - run: apk update && apk add make bash git openssh-client
-      - run: ssh-keygen -f $HOME/.ssh/id_rsa -P ''
-      - run: |
-          set -e
-          export USE_VOLUME_CONTAINER=true
-          cd test/tools/integration
-          docker create -v /opt/hetzner --name vol-container alpine /bin/true
-          docker cp . vol-container:/opt/hetzner
-          make terraform-image
-          terraform plan
-          terraform apply
-          terraform destroy
+      - run:
+          name: Install dependencies
+          command: apk update && apk add make bash git openssh-client
+      - run:
+          name: Generate ssh keypair
+          command: ssh-keygen -f $HOME/.ssh/id_rsa -P ''
+      - run:
+          name: Build docker image for terraform
+          command: cd test/tools/integration && make terraform-image
+      - run:
+          name: Create and destroy environment at cloud provider
+          command: |
+              set -e
+              export USE_VOLUME_CONTAINER=true
+              cd test/tools/integration
+              docker create -v /opt/hetzner --name vol-container alpine /bin/true
+              docker cp . vol-container:/opt/hetzner
+              terraform plan
+              terraform apply
+              terraform destroy
 
   publish:
     docker:
