--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,7 +99,7 @@ jobs:
       - setup_remote_docker
       - run:
           name: Install dependencies
-          command: apk update && apk add make bash git openssh-client jq
+          command: apk update && apk add make bash git openssh-client jq rsync
       - run:
           name: Generate ssh keypair
           command: ssh-keygen -f $HOME/.ssh/id_rsa -P ''
