Fix create-and-destroy-machine.sh script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -122,7 +122,7 @@ jobs:
               make apply
               docker cp vol-container:/opt/hetzner/terraform.tfstate .
       - run:
-          name: Create kubeadm cluster
+          name: Create kubeadm cluster and install machine-controller onto it
           command: ./test/tools/integration/provision_master.sh
       - run:
           name: Test create and destroy machine
