--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,16 +84,28 @@ workflows:
   version: 2
   build:
     jobs:
-      - checkout_code
+      - checkout_code:
+          filters:
+            tags:
+              only: /v.*/
       - install-dependencies:
           requires:
             - checkout_code
+          filters:
+            tags:
+              only: /v.*/
       - test:
           requires:
             - install-dependencies
+          filters:
+            tags:
+              only: /v.*/
       - build:
           requires:
             - install-dependencies
+          filters:
+            tags:
+              only: /v.*/
       - publish:
           requires:
             - build
@@ -101,3 +113,5 @@ workflows:
             branches:
               only:
                 - master
+            tags:
+              only: /v.*/
