--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,16 +84,28 @@ workflows:
   version: 2
   build:
     jobs:
-      - checkout_code
+      - checkout_code:
+          filters:
+            tags:
+              only: /.*/
       - install-dependencies:
           requires:
             - checkout_code
+          filters:
+            tags:
+              only: /.*/
       - test:
           requires:
             - install-dependencies
+          filters:
+            tags:
+              only: /.*/
       - build:
           requires:
             - install-dependencies
+          filters:
+            tags:
+              only: /.*/
       - publish:
           requires:
             - build
@@ -101,3 +113,11 @@ workflows:
             branches:
               only:
                 - master
+##  tagged-build:
+##    jobs:
+##      - build:
+##          filters:
+##            branches:
+##              ignore: /.*/
+##            tags:
+##              only: /.*/
