--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,12 +88,21 @@ workflows:
       - install-dependencies:
           requires:
             - checkout_code
+          filters:
+            tags:
+              only: /release-.*/
       - test:
           requires:
             - install-dependencies
+          filters:
+            tags:
+              only: /release-.*/
       - build:
           requires:
             - install-dependencies
+          filters:
+            tags:
+              only: /release-.*/
       - publish:
           requires:
             - build
