--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,6 +63,18 @@ jobs:
           paths:
             - machine-controller
 
+  printer:
+    docker:
+      - image: docker:stable
+    steps:
+      - run: echo "printing git_tag:"
+      - run: echo $GIT_TAG
+      - run: echo "printing circle_tag:"
+      - run: echo $CIRCLE_TAG
+      - run: echo "printing circle_branch:"
+      - run: echo $CIRCLE_BRANCH
+
+
   publish:
     docker:
       - image: docker:stable
@@ -84,16 +96,33 @@ workflows:
   version: 2
   build:
     jobs:
-      - checkout_code
+      - printer:
+          filters:
+            tags:
+              only: /.*/
+      - checkout_code:
+          filters:
+            tags:
+              only: /.*/
       - install-dependencies:
           requires:
             - checkout_code
+          filters:
+            tags:
+              only: /.*/
       - test:
           requires:
             - install-dependencies
+          filters:
+            tags:
+              only: /.*/
       - build:
           requires:
             - install-dependencies
+            - printer
+          filters:
+            tags:
+              only: /.*/
       - publish:
           requires:
             - build
@@ -101,3 +130,11 @@ workflows:
             branches:
               only:
                 - master
+##  tagged-build:
+##    jobs:
+##      - build:
+##          filters:
+##            branches:
+##              ignore: /.*/
+##            tags:
+##              only: /.*/
